# Lenguajes

./: README.md
ProyectoHaskell/mosaico-bin/: default.nix  mosaico-bin.cabal  shell.nix
ProyectoHaskell/mosaico-bin/src/: Diagramas.hs  Imagen.hs  Main.hs
ProyectoProlog/: Proyecto.pl  pProlog-11-10495_11-10566.pl
TareaHaskell1/: tarea-practica-funcional.lhs  tarea-práctica-funcional.lhs
TareaRuby/base/: main.rb  main2.rb  main3.rb  mod_dfs.rb  mod_fold.rb  mod_hs.rb  node_dd.rb  out1.txt  out2.txt  out3.txt  trees.rb
