name:          mosaico-bin
version:       0.1.0.0
synopsis:      Generación interactiva de mosaicos (ejecutable)
homepage:      http://ldc.usb.ve/~05-38235/cursos/CI3661/2015AJ/
author:        NOMBRES
maintainer:    EMAIL
copyright:     ⓒ NOMBRES, 2015
category:      Graphics
build-type:    Simple
cabal-version: >=1.10

executable mosaico
  default-language: Haskell2010
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:
    Diagramas
    Imagen
  ghc-options:
    -Wall
    -O2
    -threaded
--other-extensions:
  build-depends:
    base        >= 4.7 && < 4.8,
    mosaico-lib >= 0.1 && < 0.2
